# tv-show-ratings

./: .gitignore  Makefile  README.md  basedata-popular.buf.js  basedata-popular.js  basedata-unpopular.buf.js  client.js  data.46aa601f.torrent  data.56f86c3a.torrent  data.5f6178ab.torrent  data.6a178bad.torrent  data.84df8c82.torrent  data.9c9bee9c.torrent  data.a3a4eb8d.torrent  data.c6f50b36.torrent  data.e2e0ca7b.torrent  data.f3b9713a.torrent  getdata.sh  index.html  libs.css  libs.js  package.json  parse.js  parse.js.map  ratings.json  render.285b8652.js  render.31619e39.js  render.39078be2.map  render.40665758.js  render.501198ba.map  render.8add94b7.js  render.8c5d31c3.map  render.96b9555e.js  render.9e1e8177.map  render.af2cab9b.js  render.b343b77f.js  render.c81cf6df.js  render.d5475335.js  render.d8f6b485.map  render.e6ac742d.js  (+6 more)
parse-data-rs/: Cargo.toml  build.rs  getdata.sh
parse-data-rs/src/: main.rs  tsvs.rs
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: main.rs  ratings.proto  tsvs.rs
src/: Gui.tsx  genproto.sh  index.html  load.ts  parse.ts  preprocess.sh  ratings.proto  render.ts  render.tsx  seed.ts  test.js
