[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
name = "parse-data-rs"
version = "0.1.0"

[dependencies]
csv = "1.0.1"
serde_derive = "1.0.77"
serde = "1.0.77"
prost = "0.4.0"
prost-derive = "0.4.0"
bytes = "0.4.10"
serde_json = "1.0.27"
indicatif = "0.9.0"
itertools = "0.7.8"
sha2 = "0.7.1"
rayon = "1.0.2"

[build-dependencies]
prost-build = "0.4.0"

[profile.release]
opt-level = 3
lto = true