[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
name = "parse-data-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
csv = "*"
serde = { version = "*", features = ["derive"] }
prost = "*"
bytes = "*"
serde_json = "*"
indicatif = "*"
itertools = "*"
sha2 = "*"
rayon = "*"

[build-dependencies]
prost-build = "*"

[profile.release]
opt-level = 3
lto = true
