[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
name = "rust"
version = "0.1.0"

[dependencies]
csv = "1.0.1"
serde_derive = "1.0.77"
serde = "1.0.77"
prost = "0.4.0"
prost-derive = "0.4.0"
bytes = "0.4.10"
serde_json = "1.0.27"
indicatif = "0.9.0"
itertools = "0.7.8"
sha2 = "0.7.1"

[build-dependencies]
prost-build = "0.4.0"
